...
            const Divider(height: 1), // Divider below the top toolbar
            if (_visibleTabCount > 1)
              TabBar(
                controller: _tabController,
                tabs: [
                  const Tab(text: 'Live Messages'),
                  if (jetStreamEnabled) const Tab(text: 'JetStream'),
                  if (kvEnabled) const Tab(text: 'Key-Value Stores'),
                  if (objectStoreEnabled) const Tab(text: 'Object Store'),
                  if (serviceDiscoveryEnabled) const Tab(text: 'Services'),
                ],
              ),
            Expanded(
              child: _visibleTabCount > 1
...
